<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:padding="@dimen/activity_frame_width" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="1" android:shrinkColumns="1">
            <TableRow>
                <TextView android:textAppearance="@*android:style/TextAppearance.Medium.Inverse" android:gravity="right|center" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/information_diag_name" />
                <TextView android:textAppearance="@*android:style/TextAppearance.Small.Inverse" android:gravity="center" android:id="@id/account_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="name" />
            </TableRow>
            <TableRow>
                <TextView android:textAppearance="@*android:style/TextAppearance.Medium.Inverse" android:gravity="right|center" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/information_diag_pin" />
                <TextView android:textAppearance="@*android:style/TextAppearance.Small.Inverse" android:gravity="center" android:id="@id/pin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="xxyyzzyysadfasdf adsfasdf asdf asdf afsd" />
            </TableRow>
            <TableRow android:layout_height="wrap_content">
                <TextView android:textAppearance="@*android:style/TextAppearance.Medium.Inverse" android:gravity="right|center" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/information_diag_current_interval" />
                <TextView android:textAppearance="@*android:style/TextAppearance.Small.Inverse" android:gravity="center" android:id="@id/current_inteval" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="xxxx hh:mm:ss" android:lines="2" />
            </TableRow>
            <TableRow>
                <TextView android:textAppearance="@*android:style/TextAppearance.Medium.Inverse" android:gravity="right|center" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/information_diag_interval" />
                <TextView android:textAppearance="@*android:style/TextAppearance.Medium.Inverse" android:gravity="center" android:id="@id/interval" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="30" />
            </TableRow>
            <TableRow>
                <TextView android:textAppearance="@*android:style/TextAppearance.Medium.Inverse" android:gravity="right|center" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/information_diag_countdown" />
                <TextView android:textAppearance="@*android:style/TextAppearance.Medium.Inverse" android:gravity="center" android:id="@id/countdown" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="30s" />
            </TableRow>
        </TableLayout>
        <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <Button android:id="@id/reset" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/information_diag_reset" android:layout_weight="1.0" android:onClick="onResetAccount" />
            <Button android:id="@id/accounts" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/information_diag_account_uris" android:layout_weight="1.0" android:onClick="onShowAccountUris" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>