<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="@dimen/activity_frame_width" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <include layout="@layout/focus_catcher" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="@*android:style/TextAppearance.Small" android:textStyle="bold" android:textColor="@color/white" android:id="@id/username_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/xsmall" android:layout_marginBottom="@dimen/xsmall" android:text="@string/enter_account_name_label" />
            <LinearLayout android:orientation="vertical" android:id="@id/username_validation_layout" android:background="@drawable/validated_background" android:padding="@dimen/small" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/medium">
                <EditText android:id="@id/username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/enter_account_name_hint" android:singleLine="true" android:inputType="textEmailAddress" />
                <TextView android:textAppearance="@*android:style/TextAppearance.Small" android:textColor="@color/white" android:id="@id/username_status" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/medium" android:text="Account username validation message" />
            </LinearLayout>
            <TextView android:textAppearance="@*android:style/TextAppearance.Small" android:textStyle="bold" android:textColor="@color/white" android:id="@id/secret_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/xsmall" android:layout_marginBottom="@dimen/xsmall" android:text="@string/enter_account_secret_label" />
            <LinearLayout android:orientation="vertical" android:id="@id/secret_validation_layout" android:background="@drawable/validated_background" android:padding="@dimen/small" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/medium">
                <EditText android:id="@id/secret" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/enter_account_secret_hint" android:singleLine="true" />
                <TextView android:textAppearance="@*android:style/TextAppearance.Small" android:textColor="@color/white" android:gravity="center_vertical" android:id="@id/secret_status" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/medium" android:text="Account secret validation message" />
            </LinearLayout>
        </LinearLayout>
        <View android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@id/save" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/enter_account_save_label" android:layout_weight="1.0" android:onClick="onSave" />
            <Button android:id="@id/cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/enter_account_cancel_label" android:layout_weight="1.0" android:onClick="onCancel" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>