<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textAppearance="@*android:style/TextAppearance.Medium" android:textStyle="bold" android:textColor="@color/white" android:gravity="left|center" android:id="@id/help" android:background="@*android:drawable/list_selector_background" android:paddingLeft="@dimen/activity_frame_width" android:paddingRight="@dimen/activity_frame_width" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/information_button_height" android:text="@string/information_help_button" android:drawableLeft="@drawable/list_help" android:drawableRight="@drawable/list_next" android:drawablePadding="@dimen/medium" android:onClick="onHelpClicked" />
    <View android:background="@color/black" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <Button android:textAppearance="@*android:style/TextAppearance.Medium" android:textStyle="bold" android:textColor="@color/white" android:gravity="left|center" android:id="@id/legal" android:background="@*android:drawable/list_selector_background" android:paddingLeft="@dimen/activity_frame_width" android:paddingRight="@dimen/activity_frame_width" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/information_button_height" android:text="@string/information_legal_button" android:drawableLeft="@drawable/list_legal" android:drawableRight="@drawable/list_next" android:drawablePadding="@dimen/medium" android:onClick="onLegalClicked" />
    <View android:background="@color/black" android:layout_width="fill_parent" android:layout_height="1.0px" />
    <LinearLayout android:orientation="vertical" android:id="@id/diag_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textAppearance="@*android:style/TextAppearance.Medium" android:textStyle="bold" android:textColor="@color/white" android:gravity="left|center" android:id="@id/diag" android:background="@*android:drawable/list_selector_background" android:paddingLeft="@dimen/activity_frame_width" android:paddingRight="@dimen/activity_frame_width" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/information_button_height" android:text="@string/information_diag_title" android:drawableLeft="@drawable/list_diagnostics" android:drawableRight="@drawable/list_next" android:drawablePadding="@dimen/medium" android:onClick="onDiagnosticsClicked" />
        <View android:background="@color/black" android:layout_width="fill_parent" android:layout_height="1.0px" />
    </LinearLayout>
    <TextView android:textAppearance="@*android:style/TextAppearance.Small" android:gravity="bottom|center" android:id="@id/version" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/small" android:layout_marginRight="@dimen/small" android:layout_marginBottom="@dimen/activity_frame_width" android:text="@string/information_version" />
</LinearLayout>